...

                <ImageView
                    android:id="@+id/imageButton"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageButton2"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageButton3"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageButton4"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageButton5"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageButton6"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageButton7"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageButton8"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageButton9"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageButton10"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageButton11"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageButton12"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageButton13"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageButton14"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageButton15"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageButton16"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
...

        <Button
            android:id="@+id/shuffle"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:layout_weight="1"
            android:onClick="shuffleButtonClickHandler"
            android:text="Shuffle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
