...
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
...
